--- a/package.json
+++ b/package.json
@@ -10,10 +10,27 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.11.1",
     "@ducanh2912/next-pwa": "^10.0.4",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.81.1",
+    "bcryptjs": "^3.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "drizzle-kit": "^0.31.7",
+    "drizzle-orm": "^0.44.7",
+    "jotai": "^2.15.1",
+    "lucide-react": "^0.553.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.13",
+    "pg": "^8.16.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
@@ -28,6 +45,7 @@
     "eslint-plugin-prettier": "^5.1.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.5",
+    "shadcn-ui": "^0.9.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
   }
