update layout with shadcn

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL="postgresql://postgres.owulubpbtnztzcxzhjzb:Yoga0107!@aws-1-ap-south-1.pooler.supabase.com:5432/postgres"
+JWT_SECRET=my-super-secret
