--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.1",
     "@ducanh2912/next-pwa": "^10.0.4",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@shadcn/ui": "^0.0.4",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.81.1",
     "bcryptjs": "^3.0.3",
@@ -21,7 +26,9 @@
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.7",
     "drizzle-orm": "^0.44.7",
+    "jose": "^6.1.2",
     "jotai": "^2.15.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
     "next": "14.1.0",
     "next-auth": "^4.24.13",
