--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,6 @@
-DATABASE_URL="postgresql://postgres.owulubpbtnztzcxzhjzb:Yoga0107!@aws-1-ap-south-1.pooler.supabase.com:5432/postgres"
-
-NEXTAUTH_SECRET="randomstring"
-NEXTAUTH_URL="http://localhost:3000"
+DATABASE_HOST=aws-1-ap-south-1.pooler.supabase.com
+DATABASE_PORT=5432
+DATABASE_NAME=postgres
+DATABASE_USER=postgres.owulubpbtnztzcxzhjzb
+DATABASE_PASSWORD=Yoga0107!
+DATABASE_SSL=true
