--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "My PWA App",
-  "short_name": "MyPWA",
-  "description": "Next.js 14 PWA starter",
+  "name": "CPP - Digital Production",
+  "short_name": "CPP-DP",
+  "description": "Digital Production",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
